# es_pcs_26

esercitazione2/: CMakeLists.txt  es02.cpp  es2_1.cpp
esercitazione5/: cmakelists.txt  considerazioni.txt  measure_sort.cpp  sorts.hpp  test_bubblesort.cpp  test_insertion.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione5/build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  measure_sort  test_bubblesort  test_insertionsort  test_mergesort  test_quicksort  test_selectionsort
esercitazione5/build_relase/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
esercitazione_1/: cmakelists.txt  lettura.cpp  media.cpp
esercitazione_3/: main_rational.cpp  operazioni.hpp
esercitazione_4/: cmakelists.txt  grafico_es4.fig  measure_sorts.cpp  randfiller.h  sort.hpp  test_bubblesort.cpp  test_insertion.cpp  test_selectionsort.cpp
